src/test/ui/dead-code-ret.stderr
error: unreachable statement
  --> $DIR/dead-code-ret.rs:7:5
   |
LL |     println!("Paul is dead");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/dead-code-ret.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

